--- a/src/styles/AboutMeSection.module.css
+++ b/src/styles/AboutMeSection.module.css
@@ -54,7 +54,7 @@
 }
 
 .profileImage {
-  width: 400px;       /* ajuste o tamanho como quiser */
+  width: 400px;      
   height: 400px;
   border-radius: 50%;
   object-fit: cover;  
